--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ h3 {
 	padding-top: 20px;
 }
 .reg-title {
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 }
 .dropdown:hover>.dropdown-menu {
 	display: block !important;
@@ -34,8 +34,14 @@ main {
   flex: 1 0 auto;
 }
 .copyright {
-	color: white;
+	color: rgba(255,255,255,.5);
 	flex-shrink: 0;
+	font-size: 90%;
+}
+.information {
+	color: rgba(255,255,255,.5);
+	margin-top: 30px;
+	font-size: 80%;
 }
 .cart {
 	margin-top: 30px;
@@ -99,4 +105,59 @@ ul {
 }
 .card {
 	margin-bottom: 20px;
+}
+ul.social li a i {
+    margin-right: 20px;
+	font-size: 25px;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+ul.social li:hover a i {
+	font-size:30px;
+	margin-top:-10px;
+}
+ul.social li a {
+	color: #6c757d;
+}
+ul.social li a:hover{
+	color: #ffffff;
+}
+ul.quick-links li{
+	padding: 3px 0;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+ul.quick-links li:hover{
+	padding: 3px 0;
+	margin-left:5px;
+	font-weight:700;
+	color: #ffffff;
+}
+ul.quick-links li a i{
+	margin-right: 5px;
+}
+.information h5{
+	padding-left: 10px;
+    border-left: 2px solid #6c757d;
+    padding-bottom: 6px;
+}
+@media (max-width:767px){
+	.information h5 {
+	    padding-left: 0;
+	    border-left: transparent;
+	    padding-bottom: 0px;
+	    margin-top: 20px;
+	}
+}
+ul.quick-links i {
+	padding-right: 1.3em;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
